correct page wrapper top spacing

--- a/app/frontend/src/styles/application.scss
+++ b/app/frontend/src/styles/application.scss
@@ -21,7 +21,6 @@ $govuk-new-link-styles: true;
 @import 'application/footer';
 @import 'application/form';
 @import 'application/govuk-notification-banner';
-@import 'application/govuk-phase-banner';
 @import 'application/header';
 @import 'application/home';
 @import 'application/icons';
@@ -93,6 +92,10 @@ dd {
 dl,
 dd {
   margin: 0;
+}
+
+.govuk-main-wrapper {
+  padding-top: govuk-spacing(4);
 }
 
 .govuk-heading {
